--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "moment": "^2.29.4",
+    "radar-sdk-js": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-radar": "^3.7.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
