--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,14 @@
     "@types/node": "^16.18.18",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "deck.gl": "^8.9.7",
+    "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
     "radar-sdk-js": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.23",
+    "react-map-gl-geocoder": "^2.2.0",
     "react-native-radar": "^3.7.2",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
